# cisa-for-bdsca

./: .env.example  .gitignore  ARCHITECTURE.md  MANIFEST.in  QUICKSTART.md  README.md  install.ps1  pyproject.toml  release.ps1  requirements-dev.txt  requirements.txt  result_schema.json  validate_result.py
examples/: sample_vulnerabilities.txt  usage_examples.py
src/cisa_bdsca/: __init__.py  __main__.py  cli.py  client.py  config.py  euvd_mapper.py  extractors.py  kev_catalog.py  models.py  output.py  processor.py
tests/: conftest.py  test_config.py  test_extractors.py  test_models.py
